[project]
name = "ctbus_finance"
description = "A Python library for parsing finance PDF statements."
dynamic = ["version"]
dependencies = [
    "PyPDF2==3.0.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ctbus_finance.__version__"}

[tool.setuptools.packages.find]
include = ["ctbus_finance*"]
