[project]
name = "ctbus_finance"
description = "Importers that convert financial statements into Beancount entries."
dynamic = ["version"]
dependencies = [
    "beancount~=3.2",
    "fava~=1.26",
    "titlecase~=2.4",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ctbus_finance.__version__"}

[tool.setuptools.packages.find]
include = ["ctbus_finance*"]
